WIP refactor locales for actions with 'add|create|save|delete' + 'record name'

--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -15,7 +15,7 @@
           <div class="record-toolbar">
             <div class="btn-group pull-right">
               <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="#">
-                <%= I18n.t("actions.create") %> <%= I18n.t("agent._singular") %>
+                <%= I18n.t("agent._frontend.action.create") %>
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
