--- a/frontend/app/views/classifications/_edit_inline.html.erb
+++ b/frontend/app/views/classifications/_edit_inline.html.erb
@@ -9,7 +9,7 @@
         <div class="record-pane">
            <%= render :partial => "classifications/form_container", :locals => {:form => form} %>
            <div class="form-actions">
-              <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("classification._singular") %></button>
+             <button type="submit" class="btn btn-primary"><%= I18n.t("classification._frontend.action.save") %></button>
               <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
            </div>
          </div>
