--- a/frontend/app/views/classifications/_sidebar.html.erb
+++ b/frontend/app/views/classifications/_sidebar.html.erb
@@ -10,7 +10,7 @@
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
-        <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("classification._singular") %></button>
+        <button type="submit" class="btn btn-primary"><%= I18n.t("classification._frontend.action.save") %></button>
       </li>
     <% end %>
   </ul>
