--- a/frontend/app/views/accessions/_sidebar.html.erb
+++ b/frontend/app/views/accessions/_sidebar.html.erb
@@ -54,7 +54,7 @@
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
-        <button type="submit" class="btn btn-primary"><%= I18n.t "actions.save_prefix" %> <%= I18n.t "accession._singular" %></button>
+        <button type="submit" class="btn btn-primary"><%= I18n.t("accession._frontend.action.save") %></button>
       </li>
     <% end %>
   </ul>
