--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -10,7 +10,7 @@
         <div class="span12">
           <div class="record-toolbar">
             <div class="btn-group pull-right">
-              <%= link_to "Create Accession", {:controller => :accessions, :action => :new}, :class => "btn btn-small" %>
+              <%= link_to I18n.t("accession._frontend.action.create"), {:controller => :accessions, :action => :new}, :class => "btn btn-small" %>
             </div>
           </div>
         </div>
