--- a/frontend/app/views/archival_objects/_new_inline.html.erb
+++ b/frontend/app/views/archival_objects/_new_inline.html.erb
@@ -10,7 +10,7 @@
           <%= render :partial => "archival_objects/form_container", :locals => {:form => form} %>
           <div class="form-actions">
             <div class="btn-group btn-submit-group">
-              <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("archival_object._singular") %></button>
+              <button type="submit" class="btn btn-primary"><%= I18n.t("archival_object._frontend.action.save") %></button>
               <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one"><%= I18n.t("actions.save_plus_one") %></button>
             </div>
             <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
