--- a/frontend/app/views/archival_objects/_sidebar.html.erb
+++ b/frontend/app/views/archival_objects/_sidebar.html.erb
@@ -45,11 +45,11 @@
       <div class="form-actions">
         <% if @archival_object.id.blank? %>
           <div class="btn-group btn-submit-group">
-            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("archival_object._singular") %></button>
+            <button type="submit" class="btn btn-primary"><%= I18n.t("archival_object._frontend.action.save") %></button>
             <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one"><%= I18n.t("actions.save_plus_one") %></button>
           </div>
         <% else %>
-          <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("archival_object._singular") %></button>
+          <button type="submit" class="btn btn-primary"><%= I18n.t("archival_object._frontend.action.save") %></button>
         <% end %>
       </div>
     <% end %>
