--- a/frontend/app/views/classification_terms/_sidebar.html.erb
+++ b/frontend/app/views/classification_terms/_sidebar.html.erb
@@ -12,7 +12,7 @@
       <div class="form-actions">
         <% if @classification_term.id.blank? %>
           <div class="btn-group btn-submit-group">
-            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("classification_term._singular") %></button>
+            <button type="submit" class="btn btn-primary"><%= I18n.t("classification_term._frontend.action.save") %></button>
             <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one"><%= I18n.t("actions.save_plus_one") %></button>
           </div>
         <% else %>
