--- a/frontend/app/views/classifications/index.html.erb
+++ b/frontend/app/views/classifications/index.html.erb
@@ -10,7 +10,7 @@
          <div class="span12">
            <div class="record-toolbar">
              <div class="btn-group pull-right">
-               <%= link_to "#{I18n.t("actions.create")} #{I18n.t("classification._singular")}", {:controller => :classifications, :action => :new}, :class => "btn btn-small" %>
+               <%= link_to I18n.t("classification._frontend.action.create"), {:controller => :classifications, :action => :new}, :class => "btn btn-small" %>
              </div>
            </div>
          </div>
