--- a/frontend/app/views/digital_object_components/_sidebar.html.erb
+++ b/frontend/app/views/digital_object_components/_sidebar.html.erb
@@ -44,11 +44,11 @@
       <div class="form-actions">
         <% if @digital_object_component.id.blank? %>
           <div class="btn-group btn-submit-group">
-            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("digital_object_component._singular") %></button>
+            <button type="submit" class="btn btn-primary"><%= I18n.t("digital_object_component._frontend.action.save") %></button>
             <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one"><%= I18n.t("actions.save_plus_one") %></button>
           </div>
         <% else %>
-          <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("digital_object_component._singular") %></button>
+          <button type="submit" class="btn btn-primary"><%= I18n.t("digital_object_component._frontend.action.save") %></button>
         <% end %>
       </div>
     <% end %>
