--- a/frontend/app/views/digital_objects/new.html.erb
+++ b/frontend/app/views/digital_objects/new.html.erb
@@ -18,7 +18,7 @@
              <%= render :partial => "digital_objects/form_container", :locals => {:form => form} %>
 
              <div class="form-actions">
-                <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("digital_object._singular") %></button>
+               <button type="submit" class="btn btn-primary"><%= I18n.t("digital_object._frontend.action.save") %></button>
                 <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
              </div>
            </div>
