--- a/frontend/app/views/events/index.html.erb
+++ b/frontend/app/views/events/index.html.erb
@@ -32,7 +32,7 @@
         <div class="span12">
           <div class="record-toolbar">
             <div class="btn-group pull-right">
-              <%= link_to "#{I18n.t("actions.create")} #{I18n.t("event._singular")}", {:controller => :events, :action => :new}, :class => "btn btn-small" %>
+              <%= link_to I18n.t("event._frontend.action.create"), {:controller => :events, :action => :new}, :class => "btn btn-small" %>
             </div>
           </div>
         </div>
