--- a/frontend/app/views/groups/_form.html.erb
+++ b/frontend/app/views/groups/_form.html.erb
@@ -37,6 +37,6 @@
 </div>
 
 <div class="form-actions">
-  <input type="submit" class="btn btn-primary" value="<%= I18n.t("actions.save_prefix") %> <%= I18n.t("group._singular") %>" />
+  <button type="submit" class="btn btn-primary"><%= I18n.t("group._frontend.action.create") %></button>
   <%= link_to I18n.t("actions.cancel"), {:controller => :groups, :action => :index}, :class => "btn btn-secondary btn-cancel" %>
 </div>
