--- a/frontend/app/views/groups/index.erb
+++ b/frontend/app/views/groups/index.erb
@@ -9,7 +9,7 @@
       <div class="span12">
         <div class="record-toolbar">
           <div class="btn-group pull-right">
-            <%= link_to "#{I18n.t("actions.create")} #{I18n.t("group._singular")}", {:controller => :groups, :action => :new}, :class => "btn btn-small" %>
+            <%= link_to I18n.t("group._frontend.action.create"), {:controller => :groups, :action => :new}, :class => "btn btn-small" %>
           </div>
         </div>
       </div>
