--- a/frontend/app/views/instances/_subrecord_form_action.html.erb
+++ b/frontend/app/views/instances/_subrecord_form_action.html.erb
@@ -1,4 +1,4 @@
 <div class="btn-group pull-right custom-action">
-  <button class="btn btn-small" data-instance-type="analog-instance"><%= I18n.t("actions.add") %> <%= I18n.t("instance._singular") %></button>
-  <button class="btn btn-small " data-instance-type="digital-instance"><%= I18n.t("actions.add") %> <%= I18n.t("digital_object._singular") %></button>
+  <button class="btn btn-small" data-instance-type="analog-instance"><%= I18n.t("instance._frontend.action.add") %></button>
+  <button class="btn btn-small " data-instance-type="digital-instance"><%= I18n.t("instance._frontend.action.add_digital_object") %></button>
 </div>
