--- a/frontend/app/views/locations/_sidebar_batch.html.erb
+++ b/frontend/app/views/locations/_sidebar_batch.html.erb
@@ -11,8 +11,8 @@
 
     <li class="form-actions">
       <div class="btn-group <% if ["new", "create"].include?(controller.action_name) %>btn-submit-group<% end %>">
-        <button type="submit" class="btn btn-primary" style="width: 70%;"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("location._plural") %></button>
-        <button type="button" class="btn preview-locations" style="width: 30%;"><%= I18n.t("location_batch._frontend.actions.preview_short") %></button>
+        <button type="button" class="btn btn-primary" style="width: 70%;"><%= I18n.t("location_batch._frontend.action.save") %></button>
+        <button type="button" class="btn preview-locations" style="width: 30%;"><%= I18n.t("location_batch._frontend.action.preview_short") %></button>
       </div>
     </li>
   </ul>
