--- a/frontend/app/views/repositories/edit.html.erb
+++ b/frontend/app/views/repositories/edit.html.erb
@@ -14,7 +14,7 @@
           <%= render :partial => "repositories/form_container", :locals => {:form => form} %>
 
           <div class="form-actions">
-            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("repository._singular") %></button>
+            <button type="submit" class="btn btn-primary"><%= I18n.t("repository._frontend.action.save") %></button>
             <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
           </div>
         </div>
