--- a/frontend/app/views/repositories/index.html.erb
+++ b/frontend/app/views/repositories/index.html.erb
@@ -10,7 +10,7 @@
         <div class="span12">
           <div class="record-toolbar">
             <div class="btn-group pull-right">
-              <%= link_to "#{I18n.t("actions.create")} #{I18n.t("repository._singular")}", {:controller => :repositories, :action => :new}, :class => "btn btn-small" %>
+              <%= link_to I18n.t("repository._frontend.action.create"), {:controller => :repositories, :action => :new}, :class => "btn btn-small" %>
             </div>
           </div>
         </div>
