--- a/frontend/app/views/resources/_sidebar.html.erb
+++ b/frontend/app/views/resources/_sidebar.html.erb
@@ -62,7 +62,7 @@
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
-        <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("resource._singular") %></button>
+        <button type="submit" class="btn btn-primary"><%= I18n.t("resource._frontend.action.save") %></button>
       </li>
     <% end %>
   </ul>
