--- a/frontend/app/views/subjects/new.html.erb
+++ b/frontend/app/views/subjects/new.html.erb
@@ -14,7 +14,7 @@
           <%= render :partial => "subjects/form", :locals => {:form => form} %>
           <div class="form-actions">
             <div class="btn-group">
-              <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("subject._singular") %></button>
+              <button type="submit" class="btn btn-primary"><%= I18n.t("subject._frontend.action.save") %></button>
               <button type="submit" name="plus_one" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
             </div>
             <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
