--- a/frontend/app/views/users/new.html.erb
+++ b/frontend/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
          <%= render :partial => "users/form", :locals => {:form => form} %>
 
          <div class="form-actions">
-           <button id="create_account" type="submit" class="btn btn-primary"><%= I18n.t("actions.create") %> <%= I18n.t("user._frontend.section.account") %></button>
+           <button id="create_account" type="submit" class="btn btn-primary"><%= I18n.t("user._frontend.action.create_account") %></button>
            <%= link_to I18n.t("actions.cancel"), {:controller => :welcome}, :class => "btn btn-cancel" %>
          </div>
        <% end %>
