--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -5,51 +5,54 @@
   <div class="span9">
     <%= render :partial => "toolbar" %>
     <div class="record-pane">
-      <%= readonly_context :archival_object, @archival_object do |readonly| %>
-        <h2><%= @archival_object.label %> <span class="label label-info"><%= I18n.t("archival_object._singular") %></span></h2>
+      <% define_template "archival_object", jsonmodel_definition(:archival_object) do |form, archival_object| %>
+        <h2><%= archival_object.label %> <span class="label label-info"><%= I18n.t("archival_object._singular") %></span></h2>
         <%= render :partial => "shared/flash_messages" %>
         <section id="basic_information">
           <h3><%= I18n.t("archival_object._frontend.section.basic_information") %></h3>
-          <%= readonly.label_and_textarea "title" %>
-          <%= readonly.label_with_field "ref_id", "<div class='identifier-display'><div class='identifier-display-part'>#{readonly["ref_id"]}</div></div>" %>
-          <%= readonly.label_and_textfield "component_id" %>
-          <%= readonly.label_and_select "level", readonly.possible_options_for("level", true) %>
-          <%= readonly.label_and_textfield "other_level" %>
-          <%= readonly.label_and_select "language", readonly.possible_options_for("language", true) %>
-  
+          <%= form.label_and_textarea "title" %>
+          <%= form.label_with_field "ref_id", "<div class='identifier-display'><div class='identifier-display-part'>#{form["ref_id"]}</div></div>" %>
+          <%= form.label_and_textfield "component_id" %>
+          <%= form.label_and_select "level", form.possible_options_for("level", true) %>
+          <%= form.label_and_textfield "other_level" %>
+          <%= form.label_and_select "language", form.possible_options_for("language", true) %>
+
         </section>
 
-        <% if @archival_object.dates.length > 0 %>
-          <%= render :partial => "dates/show", :locals => { :dates => @archival_object.dates, :section_id => "archival_object_dates_" } %>
+        <% if archival_object.dates.length > 0 %>
+          <%= render :partial => "dates/show", :locals => { :dates => archival_object.dates, :section_id => "archival_object_dates_" } %>
         <% end %>
-        
-        <% if @archival_object.extents.length > 0 %>
-          <%= render :partial => "extents/show", :locals => { :extents => @archival_object.extents, :section_id => "archival_object_extents_" } %>
+
+        <% if archival_object.extents.length > 0 %>
+          <%= render :partial => "extents/show", :locals => { :extents => archival_object.extents, :section_id => "archival_object_extents_" } %>
         <% end %>
-  
-        <% if @archival_object.linked_agents.length > 0 %>
-          <%= render :partial => "linked_agents/show", :locals => { :linked_agents => @archival_object.linked_agents, :section_id => "archival_object_linked_agents_" } %>
+
+        <% if archival_object.linked_agents.length > 0 %>
+          <%= render :partial => "linked_agents/show", :locals => { :linked_agents => archival_object.linked_agents, :section_id => "archival_object_linked_agents_" } %>
         <% end %>
-        
-        <% if not @archival_object.subjects.blank? %>
-          <%= render :partial => "subjects/show_inline", :locals => {:subjects => @archival_object.subjects, :section_id => "archival_object_subjects_"} %>
+
+        <% if not archival_object.subjects.blank? %>
+          <%= render :partial => "subjects/show_inline", :locals => {:subjects => archival_object.subjects, :section_id => "archival_object_subjects_"} %>
         <% end %>
-  
-        <% if @archival_object.notes.length > 0 %>
-          <%= render :partial => "notes/show", :locals => { :notes => @archival_object.notes, :context => readonly } %>
+
+        <% if archival_object.notes.length > 0 %>
+          <%= render :partial => "notes/show", :locals => { :notes => archival_object.notes, :context => form } %>
         <% end %>
-  
-        <% if @archival_object.external_documents.length > 0 %>
-          <%= render :partial => "external_documents/show", :locals => { :external_documents => @archival_object.external_documents, :section_id => "archival_object_external_documents_" } %>
+
+        <% if archival_object.external_documents.length > 0 %>
+          <%= render :partial => "external_documents/show", :locals => { :external_documents => archival_object.external_documents, :section_id => "archival_object_external_documents_" } %>
         <% end %>
-  
-        <% if @archival_object.rights_statements.length > 0 %>
-          <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @archival_object.rights_statements, :section_id => "archival_object_rights_statements_" } %>
+
+        <% if archival_object.rights_statements.length > 0 %>
+          <%= render :partial => "rights_statements/show", :locals => { :rights_statements => archival_object.rights_statements, :section_id => "archival_object_rights_statements_" } %>
         <% end %>
-  
-        <% if @archival_object.instances.length > 0 %>
-          <%= render :partial => "instances/show", :locals => { :instances => @archival_object.instances, :section_id => "archival_object_instances_"  } %>
+
+        <% if archival_object.instances.length > 0 %>
+          <%= render :partial => "instances/show", :locals => { :instances => archival_object.instances, :section_id => "archival_object_instances_"  } %>
         <% end %>
+      <% end %>
+      <%= readonly_context :archival_object, @archival_object do |readonly| %>
+        <% readonly.emit_template("archival_object", @archival_object) %>
       <% end %>
     </div>
   </div>
