--- a/frontend/app/views/subjects/_sidebar.html.erb
+++ b/frontend/app/views/subjects/_sidebar.html.erb
@@ -7,7 +7,7 @@
     <% end %>
 
     <li><a href="#basic_information"><%= I18n.t("subject._frontend.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#subject_terms_"><%= I18n.t("term._plural") %> <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#subject_terms_"><%= I18n.t("subject._frontend.section.terms") %> <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" or @subject.external_documents.length > 0 %>
       <li><a href="#subject_external_documents_"><%= I18n.t("external_document._plural") %> <span class="icon-chevron-right"></span></a></li>
