--- a/frontend/app/views/user_defined/_template.html.erb
+++ b/frontend/app/views/user_defined/_template.html.erb
@@ -1,4 +1,5 @@
 <% define_template("user_defined", jsonmodel_definition(:user_defined)) do |form| %>
+  <div class="subrecord-form-fields">
       <%= form.label_and_boolean "boolean_1", {}, form.default_for("boolean_1") %>
       <%= form.label_and_boolean "boolean_2", {}, form.default_for("boolean_2") %>
       <%= form.label_and_boolean "boolean_3", {}, form.default_for("boolean_3") %>
@@ -20,4 +21,5 @@
       <%= form.label_and_textarea "text_3" %>
       <%= form.label_and_textarea "text_4" %>
       <%= form.label_and_textarea "text_5" %>
+   </div>
 <% end %>
