WIP mostly working, but with some rendering issues and cruft

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -427,5 +427,22 @@ div.progress-container {
   border: 1px solid black;
 }
 
+.audit-display-compact {
+  padding: 4px;
+  margin-right: 4px;
+  min-width: 60px;
+  float: left;
+}
+
+.audit-display-wide {
+  border: 1px solid #F6F6F6;
+  background-color: #F1F1F1;
+  padding: 4px;
+  margin-right: 4px;
+  float: right;
+  height: @baseLineHeight;
+  line-height: @baseLineHeight;
+}
+
 /* end i-frame import workaround */
 
