--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -62,16 +62,7 @@
           <% end %>
         <% end %>
         <td>
-          <% if result['create_time'] and result['user_mtime'] %>
-            <small>
-              <dl>
-                <dt><%= I18n.t("search_results.created") %></dt>
-                <dd><%= Time.parse(result['create_time']).getlocal %></dd>
-                <dt><%= I18n.t("search_results.modified") %></dt>
-                <dd><%= Time.parse(result['user_mtime']).getlocal %></dd>
-              </dl>
-            </small>
-          <% end %>
+          <%= display_audit_info(result) %>
         </td>
         <% if !params[:linker] || params[:linker] === 'false' %>
           <td class="table-record-actions">
