Make the record-pane display any child floating block elements within it's border

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -217,6 +217,9 @@ h2 > .label {
 .record-pane {
   padding: 10px;
   margin: 0;
+  overflow: hidden;
+  border: 1px solid #EEE;
+  border-top: none;
 
   h2 {
     margin-top: 0;
@@ -440,7 +443,6 @@ div.progress-container {
   padding: 4px;
   margin-right: 4px;
   float: right;
-  height: @baseLineHeight;
   line-height: @baseLineHeight;
 }
 
