extended audit display to other record types and a bit of tweakage

--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -20,6 +20,7 @@
                <div class="control-label"><%= I18n.t("agent.type") %></div>
                <div class="controls label-only"><%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></div>
             </div>
+            <%= display_audit_info(@agent) %>
           </section>
         </div>
 
