--- a/frontend/app/views/classifications/_show_inline.html.erb
+++ b/frontend/app/views/classifications/_show_inline.html.erb
@@ -24,6 +24,7 @@
                                                                      :uri => readonly["creator"]["_resolved"]["uri"])) %>
               </div>
             <% end %>
+            <%= display_audit_info(@classification) %>
           </section>
         <% end %>
 
