--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -36,7 +36,7 @@
             <%= readonly.label_and_boolean "use_restrictions" %>
             <%= readonly.label_and_textarea "use_restrictions_note" %>
 
-            <%= display_audit_info(@accession, :format => 'wide') %>           
+            <%= display_audit_info(@accession) %>
           </section>
           <% end %>
 
