--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -16,7 +16,7 @@
           <%= form.label_and_select "level", form.possible_options_for("level", true) %>
           <%= form.label_and_textfield "other_level" %>
           <%= form.label_and_select "language", form.possible_options_for("language", true) %>
-
+          <%= display_audit_info(@archival_object) %>
         </section>
 
         <% if archival_object.dates.length > 0 %>
