--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -17,6 +17,7 @@
           <%= readonly.label_and_select "digital_object_type", readonly.possible_options_for("digital_object_type") %>
           <%= readonly.label_and_select "language", readonly.possible_options_for("language") %>
           <%= readonly.label_and_boolean "restrictions" %>
+          <%= display_audit_info(@digital_object) %>
         </section>
 
         <% if @digital_object.file_versions.length > 0 %>
