Move the overflow:hidden from the record-pane to child sections (as this is what contains the floating things)

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -217,12 +217,15 @@ h2 > .label {
 .record-pane {
   padding: 10px;
   margin: 0;
-  overflow: hidden;
   border: 1px solid #EEE;
   border-top: none;
 
   h2 {
     margin-top: 0;
+  }
+
+  section {
+    overflow: hidden;
   }
 }
 
