--- a/frontend/app/views/related_accessions/_show.html.erb
+++ b/frontend/app/views/related_accessions/_show.html.erb
@@ -7,17 +7,27 @@
 
   <div class="subrecord-form-container">
     <div class="subrecord-form-fields">
-      <div class="control-group">
-        <label class="control-label"><%= I18n.t "accession._plural" %></label>
-        <div class="controls token-list">
-          <% related_accessions.each_with_index do | accession, index | %>
-            <%= render_token :object => accession["_resolved"],
-                             :label => accession["_resolved"]["title"],
-                             :type => "accession",
-                             :uri => accession["ref"] %>
-          <% end %>
-        </div>
-      </div>
+      <table class="table table-striped table-bordered table-condensed table-hover token-list">
+        <thead>
+        <tr>
+          <td><%= I18n.t("accession.id_0") %></td>
+          <td><%= I18n.t("accession.title") %></td>
+        </tr>
+        </thead>
+        <tbody>
+        <% related_accessions.each_with_index do | accession, index | %>
+          <tr>
+            <td><%= (0..3).map{|i| accession["_resolved"]["id_#{i}"]}.compact.join("-") %></td>
+            <td>
+              <%= render_token :object => accession["_resolved"],
+                               :label => accession["_resolved"]["title"],
+                               :type => "accession",
+                               :uri => accession["ref"] %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 
