--- a/frontend/app/views/related_resources/_show.html.erb
+++ b/frontend/app/views/related_resources/_show.html.erb
@@ -8,17 +8,27 @@
 
   <div class="subrecord-form-container">
     <div class="subrecord-form-fields">
-      <div class="control-group">
-        <label class="control-label"><%= I18n.t "resource._plural" %></label>
-        <div class="controls token-list">
+      <table class="table table-striped table-bordered table-condensed table-hover token-list">
+        <thead>
+          <tr>
+            <td><%= I18n.t("resource.id_0") %></td>
+            <td><%= I18n.t("resource.title") %></td>
+          </tr>
+        </thead>
+        <tbody>
           <% related_resources.each_with_index do | resource, index | %>
-            <%= render_token :object => resource["_resolved"],
-                             :label => resource["_resolved"]["title"],
-                             :type => "resource",
-                             :uri => resource["ref"] %>
+            <tr>
+              <td><%= (0..3).map{|i| resource["_resolved"]["id_#{i}"]}.compact.join("-") %></td>
+              <td>
+                <%= render_token :object => resource["_resolved"],
+                                 :label => resource["_resolved"]["title"],
+                                 :type => "resource",
+                                 :uri => resource["ref"] %>
+              </td>
+            </tr>
           <% end %>
-        </div>
-      </div>
+        </tbody>
+      </table>
     </div>
   </div>
 
