--- a/frontend/app/views/linked_agents/_show.html.erb
+++ b/frontend/app/views/linked_agents/_show.html.erb
@@ -7,35 +7,41 @@
   <h3><%= I18n.t("linked_agent._plural") %></h3>
   <div class="subrecord-form-container">
     <div class="subrecord-form-fields">
-      <div class="row-fluid">
-        <div class="span1"><strong><%= I18n.t("linked_agent.role") %></strong></div>
-        <div class="span2"><strong><%= I18n.t("linked_agent.relator") %></strong></div>
-        <div class="span4"><strong><%= I18n.t("linked_agent.ref") %></strong></div>
-        <div class="span4"><strong><%= I18n.t("linked_agent.terms") %></strong></div>
-      </div>
-      <% linked_agents.each_with_index do | link, index | %>
-        <div class="row-fluid">
-          <div class="span1 pull1">
-            <%= I18n.t("enumerations.linked_agent_role.#{link["role"]}", :default => link["role"]) %>
-          </div>
-          <div class="span2 pull1">
-            <% if link["relator"] %>
-            <%= I18n.t("enumerations.#{relator_enumeration}.#{link["relator"]}", :default => link["relator"]) %>
-            <% end %>
-          </div>
-          <div class="span4 token-list">
-            <%= render_token :object => link, 
-                             :label => link["_resolved"]["title"],
-                             :type => link["_resolved"]["agent_type"], 
-                             :uri => link["_resolved"]["uri"] %>
-          </div>
-          <div class="span4">
-            <% link['terms'].each do |term| %>
-              <span class="label label-info" title="<%= I18n.t("enumerations.subject_term_type.#{term["term_type"]}") %>"><%= term['term'] %></span>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
+      <table class="table table-striped table-bordered table-condensed table-hover token-list">
+        <thead>
+          <tr>
+            <td class="span2"><%= I18n.t("linked_agent.role") %></td>
+            <td class="span2"><%= I18n.t("linked_agent.relator") %></td>
+            <td class="span4"><%= I18n.t("linked_agent.ref") %></td>
+            <td class="span4"><%= I18n.t("linked_agent.terms") %></td>
+          </tr>
+        </thead>
+        <tbody>
+          <% linked_agents.each_with_index do | link, index | %>
+            <tr>
+              <td>
+                <%= I18n.t("enumerations.linked_agent_role.#{link["role"]}", :default => link["role"]) %>
+              </td>
+              <td>
+                <% if link["relator"] %>
+                <%= I18n.t("enumerations.#{relator_enumeration}.#{link["relator"]}", :default => link["relator"]) %>
+                <% end %>
+              </td>
+              <td class="token-list">
+                <%= render_token :object => link,
+                                 :label => link["_resolved"]["title"],
+                                 :type => link["_resolved"]["agent_type"],
+                                 :uri => link["_resolved"]["uri"] %>
+              </td>
+              <td>
+                <% link['terms'].each do |term| %>
+                  <span class="label label-info" title="<%= I18n.t("enumerations.subject_term_type.#{term["term_type"]}") %>"><%= term['term'] %></span>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </section>
