Replace entity 180 and with 160 (nbsp); Introduce classification_uri and locations_uri to the solr index to support viewing linked records of a location or classification; Fixed a few i18n omissions;

--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -135,6 +135,7 @@ $(function() {
           success: function(html) {
             $container.html(html);
             AS.resetScrollSpy();
+            $(document).trigger("loadedtreenode.aspace", [$container]);
           },
           error: function(obj, errorText, errorDesc) {
             $container.html("<div class='alert alert-error'><p>An error occurred loading this form.</p><pre>"+errorDesc+"</pre></div>")
