--- a/frontend/app/views/locations/_linker.html.erb
+++ b/frontend/app/views/locations/_linker.html.erb
@@ -6,7 +6,7 @@
   end
 %>
 <hr/>
-<div class="control-group">
+<div class="control-group required">
    <label class="control-label"><%= I18n.t("location._singular") %></label>
    <div class="controls">
        <div class="input-append linker-wrapper">
