--- a/frontend/app/views/users/new.html.erb
+++ b/frontend/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row-fluid">
    <div class="span12">
-     <%= render :partial => "shared/toolbar_new_records" %>
+     <%= render :partial => "toolbar" %>
      <div class="record-pane">
        <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("user._frontend.section.account") %></h2>
        <%= form_context :user, @user do |form| %>
