--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -38,7 +38,7 @@
               <a href="javascript:void(0);"><%= I18n.t("actions.create") %></a>
               <ul class="dropdown-menu">
                 <% creatable_types.each do |agent_type| %>
-                <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => agent_type.intern, :inline => true %>" class="linker-create-btn"><%= I18n.t("#{agent_type}._singular") %></a></li>
+                <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :agent_type => agent_type.intern, :inline => true %>" class="linker-create-btn"><%= I18n.t("#{agent_type}._singular") %></a></li>
                 <% end %>
               </ul>
             </li>
