--- a/frontend/app/views/agents/_sidebar.html.erb
+++ b/frontend/app/views/agents/_sidebar.html.erb
@@ -28,7 +28,9 @@
       <li><a href="#agent_external_documents_"><%= I18n.t "external_document._plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <li><a href="#search_embedded">Linked Records <span class="icon-chevron-right"></span></a></li>
+    <% if controller.action_name === "show" %>
+      <li><a href="#search_embedded"><%= I18n.t("agent._frontend.section.search_embedded") %> <span class="icon-chevron-right"></span></a></li>
+    <% end %>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
