--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -19,10 +19,10 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to I18n.t("agent_person._singular"), :controller => :agents, :action => :new, :type => :agent_person %></li>
-                <li><%= link_to I18n.t("agent_family._singular"), :controller => :agents, :action => :new, :type => :agent_family %></li>
-                <li><%= link_to I18n.t("agent_corporate_entity._singular"), :controller => :agents, :action => :new, :type => :agent_corporate_entity %></li>
-                <li><%= link_to I18n.t("agent_software._singular"), :controller => :agents, :action => :new, :type => :agent_software %></li>
+                <li><%= link_to I18n.t("agent_person._singular"), :controller => :agents, :action => :new, :agent_type => :agent_person %></li>
+                <li><%= link_to I18n.t("agent_family._singular"), :controller => :agents, :action => :new, :agent_type => :agent_family %></li>
+                <li><%= link_to I18n.t("agent_corporate_entity._singular"), :controller => :agents, :action => :new, :agent_type => :agent_corporate_entity %></li>
+                <li><%= link_to I18n.t("agent_software._singular"), :controller => :agents, :action => :new, :agent_type => :agent_software %></li>
               </ul>
           </div>
         </div>
