--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -1,4 +1,4 @@
-<%= setup_context :object => @agent, :controller => :agents, :type => @agent.agent_type, :title => @agent.title %>
+<%= setup_context :object => @agent, :controller => :agents, :agent_type => @agent.agent_type, :title => @agent.title %>
 
 <div class="row-fluid">
    <div class="span3">
@@ -95,7 +95,7 @@
           <%= render :partial => "external_documents/show", :locals => { :external_documents => @agent.external_documents, :section_id => "agent_external_documents_" } %>
         <% end %>
 
-        <%= render :partial => "search/embedded", :locals => {:filter_term => {"agents" => @agent.title}.to_json} %>
+        <%= render :partial => "search/embedded", :locals => {:filter_term => {"agents" => @agent.title}.to_json, :heading_text => I18n.t("agent._frontend.section.search_embedded")} %>
       <% end %>
     </div>
   </div>
