--- a/frontend/app/views/classification_terms/_show_inline.html.erb
+++ b/frontend/app/views/classification_terms/_show_inline.html.erb
@@ -24,6 +24,9 @@
           <% end %>
         </section>
       <% end %>
+
+      <%= render :partial => "search/embedded", :locals => {:filter_term => {"classification_uri" => @classification_term.uri}.to_json, :heading_text => I18n.t("classification_term._frontend.section.search_embedded")} %>
+
     </div>
   </div>
 </div>
