--- a/frontend/app/views/classification_terms/_sidebar.html.erb
+++ b/frontend/app/views/classification_terms/_sidebar.html.erb
@@ -8,6 +8,10 @@
 
     <li><a href="#basic_information"><%= I18n.t("classification_term._frontend.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
 
+    <% if controller.action_name === "show" %>
+      <li><a href="#search_embedded"><%= I18n.t("classification_term._frontend.section.search_embedded") %> <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" %>
       <div class="form-actions">
         <% if @classification_term.id.blank? %>
