--- a/frontend/app/views/classifications/_show_inline.html.erb
+++ b/frontend/app/views/classifications/_show_inline.html.erb
@@ -30,6 +30,8 @@
 
         <% readonly.emit_template("classification", @classification) %>
 
+        <%= render :partial => "search/embedded", :locals => {:filter_term => {"classification_uri" => @classification.uri}.to_json, :heading_text => I18n.t("classification._frontend.section.search_embedded")} %>
+
       <% end %>
     </div>
   </div>
