--- a/frontend/app/views/events/edit.html.erb
+++ b/frontend/app/views/events/edit.html.erb
@@ -13,7 +13,7 @@
 
           <%= render :partial => "events/form", :locals => {:form => form} %>
           <div class="form-actions">
-            <button type="submit" class="btn btn-primary"><%= I18n.t("event._frontend.action.create") %></button>
+            <button type="submit" class="btn btn-primary"><%= I18n.t("event._frontend.action.save") %></button>
             <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
           </div>
         </div>
