--- a/frontend/app/views/events/new.html.erb
+++ b/frontend/app/views/events/new.html.erb
@@ -14,7 +14,7 @@
           <%= render :partial => "events/form", :locals => {:form => form} %>
           <div class="form-actions">
             <div class="btn-group">
-              <button type="submit" class="btn btn-primary"><%= I18n.t("event._frontend.action.create") %></button>
+              <button type="submit" class="btn btn-primary"><%= I18n.t("event._frontend.action.save") %></button>
               <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
             </div>
             <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
