--- a/frontend/app/views/locations/_sidebar.html.erb
+++ b/frontend/app/views/locations/_sidebar.html.erb
@@ -8,6 +8,10 @@
 
     <li><a href="#basic_information"><%= I18n.t("location._frontend.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
 
+    <% if controller.action_name === "show" %>
+      <li><a href="#search_embedded"><%= I18n.t("location._frontend.section.search_embedded") %> <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
         <div class="btn-group <% if ["new", "create"].include?(controller.action_name) %>btn-submit-group<% end %>">
