--- a/frontend/app/views/shared/_header_repository.html.erb
+++ b/frontend/app/views/shared/_header_repository.html.erb
@@ -46,10 +46,10 @@
                     <li class="dropdown-submenu">
                       <a href="javascript:void(0);"><%= I18n.t("agent._singular") %></a>
                       <ul class="dropdown-menu">
-                        <li><%= link_to I18n.t("agent_person._singular"), :controller => :agents, :action => :new, :type => :agent_person %></li>
-                        <li><%= link_to I18n.t("agent_family._singular"), :controller => :agents, :action => :new, :type => :agent_family %></li>
-                        <li><%= link_to I18n.t("agent_corporate_entity._singular"), :controller => :agents, :action => :new, :type => :agent_corporate_entity %></li>
-                        <li><%= link_to I18n.t("agent_software._singular"), :controller => :agents, :action => :new, :type => :agent_software %></li>
+                        <li><%= link_to I18n.t("agent_person._singular"), :controller => :agents, :action => :new, :agent_type => :agent_person %></li>
+                        <li><%= link_to I18n.t("agent_family._singular"), :controller => :agents, :action => :new, :agent_type => :agent_family %></li>
+                        <li><%= link_to I18n.t("agent_corporate_entity._singular"), :controller => :agents, :action => :new, :agent_type => :agent_corporate_entity %></li>
+                        <li><%= link_to I18n.t("agent_software._singular"), :controller => :agents, :action => :new, :agent_type => :agent_software %></li>
                       </ul>
                     </li>
                   <% end %>
