--- a/frontend/app/views/users/_toolbar.html.erb
+++ b/frontend/app/views/users/_toolbar.html.erb
@@ -1,13 +1,24 @@
 <div class="row-fluid">
   <div class="span12">
     <div class="record-toolbar">
-        <div class="btn-group pull-left">
-          <div class="pull-left save-changes">
-            <button type="submit" class="btn btn-primary btn-small"><%= I18n.t("actions.save_prefix") %></button>
-          </div>
+      <div class="pull-left save-changes">
+        <button type="submit" class="btn btn-primary btn-small">
+          <% if @user.id %>
+            <%= I18n.t("user._frontend.action.update_account") %>
+          <% else %>
+            <%= I18n.t("user._frontend.action.create_account") %>
+          <% end %>
+        </button>
+      </div>
+      <% if ['edit', 'update'].include?(controller.action_name) %>
+        <div class="pull-left revert-changes">
+          &#160;
+          <%= link_to I18n.t("actions.revert"), {:controller => :users, :action => :edit, :id => @user.id}, :class => "btn btn-small" %>
+          <%= I18n.t("actions.toolbar_disabled_message") %>
         </div>
+      <% end %>
       <div class="btn-toolbar pull-right">
-        <% if !@user.is_system_user && @user.username.downcase != current_user.downcase %>
+        <% if @user.id && !@user.is_system_user && @user.username.downcase != current_user.downcase %>
           <div class="btn-group">
             <div class="btn btn-inline-form">
               <%= button_delete_action url_for(:controller => :users, :action => :delete, :id => @user.id) %>
