Show a better message if a save fails due to a conflict error.
How it works:

  * When the CRUD handler catches a ConflictException, it sets an
    instance variable to indicate the failure.

  * When the update monitor form params are processed by the form
    helper, it adds a data-* variable to the form indicating that the
    record is already known to be stale.

  * The 'poll' of the update monitor JavaScript looks for this flag
    before sending its AJAX query.  If the record is already known to
    be stale, it immediately shows a modified version of the "This
    record has been updated by another user" message.

--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -182,6 +182,12 @@
   </div>
 --></div>
 
+<div id="update_monitor_save_failed_with_stale_record_template"><!--
+  <div class="alert alert-error update-monitor-error">
+    <%= I18n.t("update_monitor.save_failed") %> - <%= I18n.t("update_monitor.stale_record") %>
+  </div>
+--></div>
+
 <div id="update_monitor_stale_record_message_template"><!--
   <div class="alert alert-error update-monitor-error">
     <%= I18n.t("update_monitor.stale_record") %>
