Add a browser check when a user first accesses the application and determine whether the support is :bronze, :silver, :gold or :unknown - show a message if a :bronze or :unknown

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -451,5 +451,13 @@ div.progress-container {
   line-height: @baseLineHeight;
 }
 
+.browser-warning {
+  margin-bottom: 0;
+
+  .container {
+    text-align: center;
+  }
+}
+
 /* end i-frame import workaround */
 
