--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 <body data-spy="scroll" data-target="#archivesSpaceSidebar" data-offset="20" class="action-<%= controller.action_name %>">
 
    <header>
+     <%= render "shared/browser_support" %>
      <%= render "shared/header_global" %>
      <%= render "site/branding" %>
      <% if current_repo %><%= render "shared/header_repository" %><% end %>
